# Pathstrike

./: .gitignore  INSTALL.md  README.md  pathstrike.yaml.example  pyproject.toml
.claude/: settings.local.json
pathstrike/: .gitignore  cli.py  config.py  logging_setup.py
pathstrike/bloodhound/: __init__.py  client.py  cypher.py  parser.py
pathstrike/engine/: adcs_discovery.py  base_handler.py  campaign.py  capability_graph.py  checkpoint.py  credential_store.py  orchestrator.py  progress.py  rollback.py  scoring.py  time_sync.py
pathstrike/handlers/: __init__.py  access.py  acl.py  adcs.py  base.py  extended_access.py  gpo.py  group.py  kerberos.py  password.py  recycle_bin.py  replication.py  shadow_creds.py  sid_history.py  trust.py
pathstrike/pathstrike/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  models.py
pathstrike/pathstrike/bloodhound/: client.py  cypher.py  hmac_auth.py  parser.py
pathstrike/pathstrike/engine/: __init__.py  campaign.py  credential_store.py  edge_registry.py  error_handler.py  opsec.py  orchestrator.py  progress.py  rollback.py  scoring.py  time_sync.py
pathstrike/pathstrike/handlers/: __init__.py  acl.py  adcs.py  (+12 more)
pathstrike/reporting/: __init__.py
pathstrike/tests/: __init__.py  test_handlers.py  test_hmac.py  test_models.py  test_wrappers.py
pathstrike/tools/: __init__.py  bloodyad_wrapper.py  certipy_wrapper.py  impacket_wrapper.py  live_enum.py  netexec_wrapper.py  ntlmrelayx_wrapper.py
pathstrike/utils/: security.py
tests/: conftest.py  test_cli.py  test_error_handler.py  test_orchestrator.py
(+11 files in other folders)
