[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathstrike"
version = "0.1.0"
description = "AD attack path automation via BloodHound CE"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
pathstrike = "pathstrike.cli:app"

[tool.setuptools.packages.find]
where = ["."]
